[package]
name = "hull"
version = "0.1.0"
authors = ["Robert Pearce <me@robertwpearce.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
lazy_static = "1.4"
mdbook = "0.4"
minify-html-onepass = "0.8"
pulldown-cmark = "0.9"
serde = { version = "1.0", features = ["derive"] }
tera = "1"
toml = "0.5"
